# pydocsgenie

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
doc/source/: conf.py
doc/styles/Vocab/ANSYS/: accept.txt
requirements/: requirement_build.txt
src/ansys/pydocsgenie/: module_parser.py
src/ansys/pydocsgenie/pydocsgenie/: __init__.py
src/pydocsgenie/: __init__.py  evaluation.py  gui.py  inference.py  module_parser.py  test.py  testing.py
tests/: test_metadata.py
