[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pydocsgenie"
version = "0.1.dev0"
author = "pydocsgenie"
description = "A docstring generator for python code"
requires-python = ">=3.7"
dependencies = [
    "openai",
    "pyqt5",
    "astunparse"
]


[project.scripts]
pydocsgenie = "pydocsgenie.gui:run_gui"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
    "pytest-cov"
]
doc = ["sphinx"]